fix gradle config